--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,138 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.nav-bar {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
+  padding: 10px;
+  height: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-container {
+  display: flex;
+  align-items: center;
+  width: 50%;
+  height: 30px;
+  margin-right: auto;
+  margin-left: auto;
+  border: 1px solid gray;
+  justify-content: center;
+}
+
+.search-container input {
+  width: 100%;
+}
+
+.book-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    height: 400px;
+    margin: 20px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+.book-name {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.book-genre {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.book-object {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 10%;
+    height: 8%;
+}
+
+.query-seed-button {
+    width: 80%;
+    height: 20%;
+    background-color: lightblue;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-gap: 20px;
+  width: 80%;
+  margin-top: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.grid-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.global-explanation-container {
+    background-color: #F0F0F0;
+    padding: 20px;
+    text-align: center;
+    height: 200px;
+    display: flex;
+}
+
+.side-bar-container {
+    background-color: #E0E0E0;
+    padding: 20px;
+    width: 300px;
+    position: absolute;
+    right: 0;
+    top: 90px;
+    bottom: 0;
+}
+
+.book-object {
+  width: 35%;
+  height: 220px;
+  margin: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.book-object img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 5px 5px 0 0;
+}
+
+.book-object p {
+  margin: 10px 0;
 }
