--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f5f5f5;
+  background-color: #e3ebda;
   padding: 10px;
-  height: 50px;
+  height: 5%;
+
 }
 
-.search-container {
+/* .search-container {
+    background-color: #E0E0E0;
   display: flex;
   align-items: center;
   width: 50%;
@@ -25,22 +27,38 @@
   margin-left: auto;
   border: 1px solid gray;
   justify-content: center;
+} */
+
+
+/* .search-container input {
+  width: 100%;
+} */
+
+.search-container {
+  display: content;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5px;
+  width: 70%;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .search-container input {
-  width: 100%;
+  width: 90%;
 }
 
 .book-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 300px;
+    align-items: end;
+    justify-content: end;
+    width: 500px;
     height: 400px;
-    margin: 20px;
-    border: 1px solid black;
-    border-radius: 10px;
+    margin: 10px;
+    border: 10px solid black;
+    border-radius: 20px;
 }
 
 .book-name {
@@ -54,35 +72,25 @@
   margin-bottom: 10px;
 }
 
-.book-object {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 10%;
-    height: 8%;
-}
 
 .query-seed-button {
-    width: 80%;
-    height: 20%;
+    width: 90%;
+    height: 20px;
     background-color: lightblue;
-    border: none;
+    border: 1px solid black;
     border-radius: 10px;
-    font-size: 16px;
+    font-size: 12px;
     font-weight: bold;
     cursor: pointer;
 }
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  grid-gap: 20px;
-  width: 80%;
-  margin-top: 20px;
-  flex-wrap: wrap;
-  justify-content: center;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 2%;
+  width: 77%;
+  
 }
 
 .grid-item {
@@ -90,14 +98,20 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  padding: 2px;
   background-color: #fff;
   border-radius: 10px;
   cursor: pointer;
 }
 
 .global-explanation-container {
-    background-color: #F0F0F0;
+    padding: 20px;
+    text-align: center;
+    height: 200px;
+    display: flex;
+}
+
+.local-explanation-container {
     padding: 20px;
     text-align: center;
     height: 200px;
@@ -105,20 +119,26 @@
 }
 
 .side-bar-container {
-    background-color: #E0E0E0;
-    padding: 20px;
-    width: 300px;
+    background-color: #e3ebda;
+    padding: 5px;
+    width: 23%;
     position: absolute;
     right: 0;
-    top: 90px;
+    top: 7%;
     bottom: 0;
 }
 
+.main-screen{
+  padding-left: 2%;
+  padding-top: 1%;
+  width: 100%
+}
+
 .book-object {
-  width: 35%;
-  height: 220px;
+  width: 73%;
+  height: 76%;
   margin: 10px;
-  border: 1px solid #ccc;
+  border: 1px #ccc;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
@@ -128,11 +148,12 @@
 
 .book-object img {
   width: 100%;
-  height: 150px;
+  height: 100%;
+  align-items: flex-start;
   object-fit: cover;
-  border-radius: 5px 5px 0 0;
+  border-radius: 1px 1px 0 0;
 }
 
 .book-object p {
-  margin: 10px 0;
+  margin: 1px 0;
 }
