--- a/src/App.css
+++ b/src/App.css
@@ -104,30 +104,6 @@
   cursor: pointer;
 }
 
-.global-explanation-container {
-    padding: 20px;
-    text-align: center;
-    height: 200px;
-    display: flex;
-}
-
-.local-explanation-container {
-    padding: 20px;
-    text-align: center;
-    height: 200px;
-    display: flex;
-}
-
-.side-bar-container {
-    background-color: #e3ebda;
-    padding: 5px;
-    width: 23%;
-    position: absolute;
-    right: 0;
-    top: 7%;
-    bottom: 0;
-}
-
 .main-screen{
   padding-left: 2%;
   padding-top: 1%;
@@ -156,4 +132,43 @@
 
 .book-object p {
   margin: 1px 0;
+}
+
+.side-bar-container {
+    background-color: #F2ECDC;
+    padding: 5px;
+    width: 23%;
+    position: absolute;
+    right: 0;
+    top: 7.4%;
+    bottom: 0;
+}
+
+.global-explanation-container {
+    padding: 15px;
+    text-align: center;
+    height: 20%;
+    display: flex;
+    
+}
+
+.local-explanation-container {
+    padding: 15px;
+    text-align: center;
+    position: relative;
+    top: 55%;
+}
+
+.local-explanation-storypace-container {
+    padding: 5px;
+    text-align: center;
+    display: flex;
+    
+}
+
+.local-explanation-facets-container {
+    word-wrap: break-word;
+    padding: 5px;
+    text-align: center;
+    display: flex;
 }
