--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,22 @@
 .app-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
   
 }
 
 .nav-bar {
-  width: 100%;
+  position: absolute;
+  width: 74%;
+  left: 0;
+  top: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
-  background-color: #e3ebda;
+  align-items: flex-start;
+  background-color: white;
   padding: 10px;
-  height: 5%;
+  height: 10%;
 
 }
 
@@ -40,13 +43,15 @@
   align-items: center;
   justify-content: center;
   margin-top: 5px;
-  width: 70%;
+  width: auto;
   margin-right: auto;
   margin-left: auto;
 }
 
 .search-container input {
-  width: 90%;
+  width: 100%;
+  border:solid black 2px;
+  border-style: groove;
 }
 
 .book-container {
@@ -88,8 +93,8 @@
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  grid-gap: 2%;
-  width: 77%;
+  grid-gap: 2rem;
+  width: 75%;
   
 }
 
@@ -107,31 +112,55 @@
 .global-explanation-container {
     padding: 20px;
     text-align: center;
-    height: 200px;
+    height: 400px;
     display: flex;
 }
 
 .local-explanation-container {
     padding: 20px;
     text-align: center;
-    height: 200px;
+    height: 400px;
     display: flex;
 }
 
 .side-bar-container {
-    background-color: #e3ebda;
+    background-color: white;
     padding: 5px;
-    width: 23%;
+    width: 25%;
     position: absolute;
     right: 0;
-    top: 7%;
+    top: 0;
     bottom: 0;
+    border-left: 3mm ridge;
+    border-left-style: groove;
+    border-left-color: black;
 }
 
-.main-screen{
+.main-screen-old{
   padding-left: 2%;
   padding-top: 1%;
-  width: 100%
+  margin-top: 7%;
+  width: 74%;
+  display: flex;
+  flex-direction: column;
+  justify-content:flex-start;
+  align-items: center;
+  height: 90%;
+  padding-top: 10px; /* Adjust as needed */
+}
+.main-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 1%; /* Adjust as needed */
+  width: 74%;
+  height: auto;
+  
+  margin-left: 1%;
+  margin-bottom: 1%;
+  background-color: white;
+  margin-top: 7%;
 }
 
 .book-object {
@@ -156,4 +185,101 @@
 
 .book-object p {
   margin: 1px 0;
+}
+
+
+/* Added new grid styles */
+.book-grid {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-auto-rows: repeat(3, 1fr);
+  gap: 2rem;
+  margin-left: 5px;
+  margin-right: 2%;
+  margin-bottom: 5px;
+  width: 100%;
+  height: 100%;
+  /* background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(10, 10, 36, 1) 0%,
+    rgba(200, 30, 30, 1) 89%
+  ); */
+}
+
+@media screen and (max-width: 768px) {
+  .book-grid {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+
+.book {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.book img {
+  display: block;
+  width: 70%;
+  height: auto;
+}
+
+.book-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: gainsboro;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.book:hover .book-overlay {
+  opacity: 0.9;
+  transition-delay: 1s;
+}
+
+.book-overlay h2 {
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
+  color: black;
+}
+
+.book-overlay p {
+  font-size: 1.0rem;
+  color: black;
+}
+
+.link {
+  width: 100%;
+  height: 100%;
+}
+
+.book-card {
+  object-fit: cover;
+  width: auto;
+  height: auto;
+  position: relative;
+}
+
+.imageLarge {
+  margin: 1em 5px 17px 0;
+  display: block;
+  width: 70%;
+  height: auto;
+  transition: transform 450ms;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.imageLarge:hover {
+  transform: scale(1.08);
 }
