--- a/src/components/search_bar.css
+++ b/src/components/search_bar.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   margin-top: 20px;
-  width: 90%;
+  width: 70%;
   margin-right: auto;
   margin-left: auto;
 } 
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 70%;
+  width: 90%;
 }
 
 .search-select {
@@ -39,7 +39,7 @@
   width: 150px;
   height: 40px;
   font-size: 16px;
-  background-color: lightblue;
+  background-color: blueviolet;
   color: white;
   border: none;
   border-radius: 4px;
