--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -28,3 +28,17 @@
   border:solid black 2px;
   border-style: groove;
 }
+
+.about-us-link {
+  display: inline-block;
+  margin-left: 10%;
+  margin-top: 15px;
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+  text-decoration: none;
+}
+
+.about-us-link:hover {
+  text-decoration: underline;
+}
