--- a/src/pages/AboutUs.css
+++ b/src/pages/AboutUs.css
@@ -1,9 +1,9 @@
-.about-us {
+/* .about-us {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding-top: 1%; /* Adjust as needed */
+  padding-top: 1%; 
   width: 74%;
   height: auto;
   
@@ -11,4 +11,52 @@
   margin-bottom: 1%;
   background-color: white;
   margin-top: 15%;
+} */
+
+.about-us {
+  max-width: 800px;
+  margin-top: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: auto;
+}
+
+.header-section {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.video-section {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.contact-section {
+  margin-bottom: 40px;
+}
+
+.form-section {
+  text-align: center;
+}
+
+.google-form-button {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 16px 24px;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  background-color: #4285f4;
+  border-radius: 8px;
+  transition: background-color 0.2s ease;
+}
+
+.google-form-button:hover {
+  background-color: #2c7ff8;
+}
+
+.google-form-button:active {
+  background-color: #1c5fab;
 }
