changed about us

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -42,3 +42,12 @@
 .about-us-link:hover {
   text-decoration: underline;
 }
+
+/* .nav-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+} */
