beautify local expln and landing

--- a/src/pages/BookGrid.css
+++ b/src/pages/BookGrid.css
@@ -137,10 +137,11 @@
 .local-explanation-container {
     padding: 20px;
     text-align: center;
-    height: 400px;
+    height: 900px;
     display: flex;
     position:relative;
     margin-top: 12rem;
+    margin-bottom: 2rem;
 }
 
 .side-bar-container {
