--- a/src/components/local_explanation.css
+++ b/src/components/local_explanation.css
@@ -1,6 +1,11 @@
 .local-explanation {
   font-family: sans-serif;
   text-align: center;
+  margin-top: 15px;
+  margin-bottom: 5px;
+  height:auto;
+  width: 550px;
+
 }
 
 .facet-container {
