--- a/src/pages/BookGrid.css
+++ b/src/pages/BookGrid.css
@@ -304,3 +304,24 @@
 .imageLarge:hover {
   transform: scale(1.08);
 }
+
+.thumbs {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 10px;
+}
+
+.thumbs-up,
+.thumbs-down {
+  cursor: pointer;
+  font-size: 24px;
+}
+
+.thumbs-up {
+  color: green;
+}
+
+.thumbs-down {
+  color: red;
+}
