--- a/src/pages/BookGrid.css
+++ b/src/pages/BookGrid.css
@@ -112,35 +112,43 @@
 .global-explanation-container {
     padding: 10px;
     text-align: center;
-    height: 650px;
+    height: 40em;
+    width: auto;
     display: flex;
     position: relative;
+    margin-top: 5em;
 }
 
 .global-explanation-slider {
-    padding: 20px;
+    padding: 1em;
     text-align: center;
-    height: 250px;
+    height: 70em;
+    width: auto;
     display: flex;
     position:absolute;
+    margin-top: 3em;
+    margin-left: 1em;
+    margin-right: 2em;
+    margin-bottom: 3em
 }
 .global-explanation-chips {
-    padding: 20px;
+    padding: 1em;
     text-align: center;
-    height: 250px;
+    height: 2em;
     display: flex;
     position: relative;
-    margin-top: 500px;
+    margin-top: 1em;
 
 }
 
 .local-explanation-container {
-    padding: 20px;
+    padding: 1em;
     text-align: center;
-    height: 900px;
+    height: auto;
+    width: auto;
     display: flex;
     position:relative;
-    margin-top: 12rem;
+    margin-top: 5em;
     margin-bottom: 2rem;
 }
 
@@ -178,15 +186,15 @@
   width: 74%;
   height: auto;
   
-  margin-left: 1%;
-  margin-bottom: 1%;
+  margin-left: 1em;
+  margin-bottom: 1em;
   background-color: white;
-  margin-top: 7%;
+  margin-top: 3em;
 }
 
 .book-object {
-  width: 80%;
-  height: 90%;
+  width: 90%;
+  height: 100%;
   margin: 10px;
   border: 1px #ccc;
   border-radius: 5px;
@@ -215,9 +223,10 @@
   grid-template-columns: repeat(5, 1fr);
   grid-auto-rows: repeat(3, 1fr);
   gap: 2rem;
-  margin-left: 5px;
-  margin-right: 2%;
-  margin-bottom: 5px;
+  margin-top: 4em;
+  margin-left: 1em;
+  margin-right: 1em;
+  margin-bottom: 1em;
   width: 100%;
   height: 100%;
   /* background: rgb(2, 0, 36);
@@ -309,13 +318,13 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  margin-top: 10px;
+  margin-top: 1em;
 }
 
 .thumbs-up,
 .thumbs-down {
   cursor: pointer;
-  font-size: 24px;
+  font-size: 16px;
 }
 
 .thumbs-up {
