--- a/src/pages/BookGrid.css
+++ b/src/pages/BookGrid.css
@@ -20,22 +20,6 @@
 
 }
 
-/* .search-container {
-    background-color: #E0E0E0;
-  display: flex;
-  align-items: center;
-  width: 50%;
-  height: 30px;
-  margin-right: auto;
-  margin-left: auto;
-  border: 1px solid gray;
-  justify-content: center;
-} */
-
-
-/* .search-container input {
-  width: 100%;
-} */
 
 .search-container {
   display: content;
@@ -117,6 +101,7 @@
     display: flex;
     position: relative;
     margin-top: 5em;
+    color: white;
 }
 
 .global-explanation-slider {
@@ -153,7 +138,7 @@
 }
 
 .side-bar-container {
-    background-color: white;
+    background-color: black;
     padding: 5px;
     width: 25%;
     height: 100%;
@@ -362,4 +347,5 @@
   bottom: 0;
   background-color: rgba(255, 255, 255, 0.5);
 }
+
 
