--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -53,6 +53,31 @@
   text-decoration: none;
 }
 
+.dropdown-container {
+  margin-top: 2%;
+  margin-left: 3%;
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
 /* .nav-bar {
   position: fixed;
   top: 0;
