--- a/src/pages/BookGrid.css
+++ b/src/pages/BookGrid.css
@@ -96,11 +96,11 @@
 .global-explanation-container {
     padding: 10px;
     text-align: center;
-    height: 40em;
+    height: 28em;
     width: auto;
     display: flex;
     position: relative;
-    margin-top: 5em;
+    margin-top: 2em;
     color: white;
 }
 
@@ -122,7 +122,7 @@
     height: 2em;
     display: flex;
     position: relative;
-    margin-top: 1em;
+    margin-top: 2em;
 
 }
 
@@ -134,7 +134,7 @@
     display: flex;
     position:relative;
     margin-top: 5em;
-    margin-bottom: 2rem;
+    margin-bottom: 2em;
 }
 
 .side-bar-container {
@@ -208,13 +208,14 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-auto-rows: repeat(3, 1fr);
-  gap: 2rem;
-  margin-top: 4em;
+  gap: 1rem;
+  margin-top: 2.5em;
   margin-left: 1em;
   margin-right: 1em;
   margin-bottom: 1em;
   width: 100%;
   height: 100%;
+  position: relative;
   /* background: rgb(2, 0, 36);
   background: linear-gradient(
     90deg,
@@ -348,6 +349,8 @@
   background-color: rgba(255, 255, 255, 0.5);
 }
 
+​
+
 
 /* Modal css*/
 /* Modal */
@@ -396,14 +399,23 @@
   transition: opacity 300ms ease-in-out;
 } */
 
+.compare-books-container{
+  margin-top: 2.5em;
+  margin-left: 1em;
+  margin-right: 1em;
+  margin-bottom: 1em;
+  width: 85%;
+  height: auto;
+  position: fixed;
+}
 .compare-books-box {
-  position: 'relative';
-  top: '50%';
-  left: '50%';
-  transform: 'translate(-50%, -50%)';
-  width: 400;
-  background-color: 'background.paper';
-  border: '2px solid #000';
+  position: fixed;
+  top: 50%;
+  left: 40%;
+  transform: translate(-50%, -50%);
+  width: 700;
+  background-color: whitesmoke;
+  border: 2px solid #000;
   box-shadow: 24;
   align-items: center;
   display: flex;
