moved book-grid div to MUI Grid and Card

--- a/src/pages/BookGrid.css
+++ b/src/pages/BookGrid.css
@@ -119,7 +119,7 @@
 .global-explanation-chips {
     padding: 1em;
     text-align: center;
-    height: 2em;
+    height: 10%;
     display: flex;
     position: relative;
     margin-top: 2em;
